# CopyImagesOpenCV

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp  main.cpp~
